[package]
name = "session-slicer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive", "cargo"] }
rayon = "1.7.0"
thiserror = "1.0.44"
