[package]
name = "session-slicer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive", "cargo"] }
csv = "1.2.2"
log = "0.4.19"
rayon = "1.7.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
stderrlog = "0.5.4"
thiserror = "1.0.44"
which = "4.4.0"
