[package]
name = "session-slicer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive", "cargo"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
csv = "1.2.2"
log = "0.4.19"
rayon = "1.7.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
signalo = { version = "0.6.0", features = ["std"] }
stderrlog = "0.5.4"
symphonia = { version = "0.5.3", features = ["symphonia-format-isomp4", "symphonia-bundle-mp3", "isomp4", "mp3", "aac"] }
thiserror = "1.0.44"
which = "4.4.0"
